compiler/testData/cli/js/illegalJsCode.kt
fun Int.foo(x: Int) {
    js("this = x;")
}